assets/css/scrumboard.css
/* ... */
      #deleteConformation .modal-content .modal-header .modal-title {
        color: #3b3f5c;
        font-size: 18px;
        font-weight: 700;
        align-self: center; }
    #deleteConformation .modal-content .modal-body {
      padding: 28px 0; }
      #deleteConformation .modal-content .modal-body p {
        color: var(--main-accent-color);
        font-size: 15px;
        font-weight: 600;
        margin-bottom: 0; }
    #deleteConformation .modal-content .modal-footer {
      padding: 0;
      border: none; }
      #deleteConformation .modal-content .modal-footer [data-dismiss="modal"] {
        background-color: #fff;
        color: #e7515a;
        font-weight: 700;
        border: 1px solid #e8e8e8;
        padding: 10px 25px; }
      #deleteConformation .modal-content .modal-footer [data-remove="task"] {
        color: #fff;
        font-weight: 600;
        padding: 10px 25px; }
  
  .task-list-section {
    display: flex;
    overflow-x: auto;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    padding-bottom: 15px; }
  
  .task-list-container {
    min-width: 309px;
    padding: 0 15px;
    width: 467px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
 }
    .task-list-container:first-child {
      padding-left: 0; }
    .task-list-container:last-child {
      padding-right: 0; }
  
  /*  
      Connect Sorting Div
  */
  .connect-sorting {
    padding: 15px;
    border-radius: 10px;
    -webkit-box-shadow: 0 4px 6px 0 rgba(85, 85, 85, 0.08), 0 1px 20px 0 rgba(0, 0, 0, 0.07), 0px 1px 11px 0px rgba(0, 0, 0, 0.07);
    -moz-box-shadow: 0 4px 6px 0 rgba(85, 85, 85, 0.08), 0 1px 20px 0 rgba(0, 0, 0, 0.07), 0px 1px 11px 0px rgba(0, 0, 0, 0.07);
    box-shadow: 0 4px 6px 0 rgba(85, 85, 85, 0.08), 0 1px 20px 0 rgba(0, 0, 0, 0.07), 0px 1px 11px 0px rgba(0, 0, 0, 0.07); }
    .connect-sorting .task-container-header {
      display: flex;
      justify-content: space-between;
      padding: 18px 5px; }
      .connect-sorting .task-container-header .dropdown .dropdown-menu {
        padding: 11px; }
        .connect-sorting .task-container-header .dropdown .dropdown-menu .dropdown-item {
          padding: 5px;
          font-size: 14px;
          font-weight: 700; }
          .connect-sorting .task-container-header .dropdown .dropdown-menu .dropdown-item:hover {
            color: var(--main-accent-color); }
          .connect-sorting .task-container-header .dropdown .dropdown-menu .dropdown-item.active, .connect-sorting .task-container-header .dropdown .dropdown-menu .dropdown-item:active {
            background-color: transparent; }
      .connect-sorting .task-container-header h6 {
        font-size: 16px;
        font-weight: 700; }
    .connect-sorting .add-s-task {
      cursor: pointer;
      transition: all 0.3s ease-out;
      -webkit-transition: all 0.3s ease-out; }
      .connect-sorting .add-s-task:hover {
        -webkit-transform: translateY(-3px);
        transform: translateY(-3px); }
      .connect-sorting .add-s-task .addTask {
        display: block;
        color: #ffffff;
        font-size: 14px;
        font-weight: 600;
        text-align: center;
        padding: 13px 11px;
        border-radius: 4px;
        background: var(--main-accent-color); }
        .connect-sorting .add-s-task .addTask:hover {
          color: #fff; }
        .connect-sorting .add-s-task .addTask svg {
          width: 18px;
          vertical-align: bottom; }
  
.task-header {
    margin-bottom: 25px;
    display: flex;
    justify-content: space-between;
    padding: 20px 20px 0 20px; 
}
.task-header h4 {
    font-size: 16px;
    font-weight: 700;
    margin-bottom: 0; }
.task-header svg.feather-edit-2 {
    width: 18px;
    height: 18px;
    color: var(--main-accent-color);
    vertical-align: middle;
    fill: rgba(0, 23, 55, 0.08);
    cursor: pointer;
    padding: 0;
    margin-right: 5px; }
    .task-header svg.feather-edit-2:hover {
    color: var(--main-accent-color);
    fill: rgba(27, 85, 226, 0.239216); }
.task-header svg.feather-trash-2 {
    color: #e7515a;
    margin-right: 6px;
    vertical-align: middle;
    width: 18px;
    height: 18px;
    fill: rgba(231, 81, 90, 0.14);
    cursor: pointer; }
    .task-header svg.feather-trash-2:hover {
    fill: rgba(231, 81, 90, 0.37); }
  
  .card {
    border: none;
    border-radius: 4px;
    margin-bottom: 30px;
    -webkit-box-shadow: 2px 5px 17px 0 rgba(31, 45, 61, 0.1);
    box-shadow: 2px 5px 17px 0 rgba(31, 45, 61, 0.1); }
    .card .card-body {
      padding: 0; }
      .card .card-body .task-body .task-bottom {
        display: flex;
        justify-content: space-between;
        padding: 12px 15px; }
        .card .card-body .task-body .task-bottom div.tb-section-1 span {
          font-size: 13px;
          font-weight: 600;
          width: 17px;
          height: 17px; }
          .card .card-body .task-body .task-bottom div.tb-section-1 span:hover {
            color: var(--main-accent-color);
            cursor: pointer; }
            .card .card-body .task-body .task-bottom div.tb-section-1 span:hover svg {
              color: var(--main-accent-color);
              fill: rgba(27, 85, 226, 0.239216); }
        .card .card-body .task-body .task-bottom div.tb-section-1 svg {
          width: 18px;
          vertical-align: bottom; }
          .card .card-body .task-body .task-bottom div.tb-section-1 svg:not(:last-child) {
            margin-right: 5px; }
        .card .card-body .task-body .task-bottom div.tb-section-2 svg {
          width: 18px;
          cursor: pointer;
          color: var(--main-accent-color);
          margin-right: 6px;
          vertical-align: middle;
          width: 18px;
          height: 18px;
          fill: rgba(0, 23, 55, 0.08); }
/* ... */

